@@ -79,9 +79,10 @@ namespace Rivet {
     }
 
     double angle(const Vector3& v) const {
-      double localDotOther = unit().dot(v.unit());
-      if(Rivet::isZero(localDotOther - 1.0)) return 0.0;
-      return acos( localDotOther );
+      const double localDotOther = unit().dot(v.unit());
+      if (fuzzyEquals(localDotOther, 1.0)) return 0.0;
+      else if (fuzzyEquals(localDotOther, -1.0)) return M_PI;
+      return acos(localDotOther);
     }
 
     Vector3 unit() const {
